# lily-test-search

./: .gitignore  Cargo.toml  README.md
config/: config.toml
docs/: fst.md  requests.http  search_engine.md
examples/: fst.rs  regex.rs
lily-types/: Cargo.toml
lily-types/src/: lib.rs  server.rs
lily-types/src/query/: mod.rs
src/: builder.rs  db.rs  error.rs  indexer.rs  main.rs  route.rs
src/auth/: mod.rs
src/utils/: mod.rs  query.rs
src/v2/: index.rs  index_catalog.rs  mod.rs  settings.rs  user.rs
src/v2/routes/: add.rs  index.rs  mod.rs  search.rs
