[package]
name = "lily_test_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lily-types"]

[dependencies]
# actix
actix-web           = "4.3.1"
actix-cors          = "0.6.4"
actix-service       = "2.0.2"
actix-multipart     = "0.6.0"
actix-session       = { version = "0.7.2", features = ["redis-actor-session"] }
actix-redis         = "0.12.0"
async-trait         = "0.1.68"

#logger
lily-types          = { path = "./lily-types" }
env_logger          = "0.8"
log                 = "0.4"
anyhow              = "1.0.33"
serde               = { version = "1.0.132", features = ["derive"] }
serde_json          = "1.0.73"
derive_more = "0.99.11"
uuid = { version = "0.8", features = ["serde", "v1", "v4"] }
structopt           = "0.3.26"
dashmap             = "5.4.0"

# db
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"
tokio = "1.27.0"
config = "0.13.1"
scylla = "0.3.1"

# others
time = "0.3.20"
futures = "0.3.6"
tantivy = "0.19.2"
fst = { version = "0.4", features=["levenshtein"]}